2002-04-29  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* objects/UML/class.c (umlclass_calculate_data): Uses the same
	font for drawing and calculating now.

	* configure.in: Added utime.h check.

	* app/render_gdk.c (draw_string): Uses gdk_draw_text_wc when in
	GTK_DOESNT_TALK_UTF8_WE_DO.  Thus it matches the string width calc.

2002-04-26  Hans Breuer  <hans@breuer.org>

	[ Instead of fixing about 70 occurances in 20 files
	  where GTK_TALKS_UTF8_WE_DONT needed to be handled
	  Dia on win32 from now on uses glib-2.0 and not 
	  only talks utf-8 with gtk-1.3 but also internally.
	  GTK_TALKS_UTF8_WE_DONT isn't supported/needed
	  anymore. ]

	* config.h.win32 : #define UNICODE_WORK_IN_PROGRESS
	#undef GTK_TALKS_UTF8_WE_DONT

	* */makefile.msc : changes to use glib-2.0 (still
	using gtk+1.3(win32-production)

	* app/disp_callbacks.c : remove GTK_TALKS_UTF8_WE_DONT,
	adapt kevent->string handling, add <string.h>
	* app/render_gdk.c (get_text_width) : the length given
	is in chars, gdk_text_width() needs bytes

	* app/render_libart.c : 
	* app/render_pixmap.c : remove GTK_TALKS_UTF8_WE_DONT
	(could simplify the same way as done in render_gdk.c)

	* app/diagram_tree.c app/paginate_gdiprint.cpp
	  app/sheets.c :
	* lib/prop_basic.c lib/prop_geomtypes.c 
	  lib/propdialgs.c lib/propobject.c :
	added <string.h> which is now removed from charconv.h

	* lib/charconv.h : optional use infrastructure from
	glib-2.0 -> only five direct function mapping left

	* lib/charconv.c : avoid to build this with glib-2.0

	* lib/font.c : no string conversion needed anymore	
	when Dia and Gtk talk utf-8, also code adaptions
	for GLIB_CHECK_VERSION(2,0,0)

	* lib/libdia.def : removed charconv functions

	* lib/prop_inttypes.c : removed GTK_TALKS_UTF8_WE_DONT,
	replace charconv_unichar_to_utf8() with g_unichar_to_utf8()

	* lib/prop_text.c lib/prop_widgets.c lib/font.c : 
	removed GTK_TALKS_UTF8_WE_DONT

	* lib/text.c : finally(?) fixed cursor <place|move>ment 